# opensanctions-kyb-graph-old

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  catalog.in.yml  catalog.txt  setup.cfg  upload.sh
.github/: dependabot.yml
.github/workflows/: build-docker.yml  compile-catalog.yml  process-corpwatch.yml  process-cy-companies.yml  process-cy_companies.yml  process-cz_business_register.yml  process-de_offeneregister.yml  process-dk_cvr.yml  process-ee_ariregister.yml  process-gb_coh_psc.yml  process-gleif.yml  process-icij_offshoreleaks.yml  process-lv_business_register.yml  process-md_companies.yml  process-ru_egrul.yml  process-sk_rpvs.yml  process-ua-edr.yml  process-ua_edr.yml  process-us_corpwatch.yml
common/: bods.py  catalog.py  util.py
datasets/corpwatch/: Makefile  metadata.yml  parse.py
datasets/cy_companies/: Makefile  metadata.yml  parse.py
datasets/cz_business_register/: Makefile  metadata.yml  parse.py
datasets/de_offeneregister/: Makefile  README.md  metadata.yml  parse.py
datasets/dk_cvr/: Makefile  metadata.yml
datasets/ee_ariregister/: Makefile  README.md  metadata.yml  parse.py
datasets/gb_coh_psc/: Makefile  README.md  manifest.yml  parse.py
datasets/gb_coh_psc_bods/: Makefile  metadata.yml
datasets/gleif/: Makefile  README.md  metadata.yml  parse.py
datasets/icij_offshoreleaks/: Makefile  metadata.yml  parse.py  patches.yml
datasets/lv_business_register/: Makefile  README.md  metadata.yml  parse.py  sources.txt
datasets/md_companies/: Makefile  README.md  metadata.yml  parse.py
datasets/ru_egrul/: Makefile  (+2 more)
(+13 files in other folders)
