[metadata]
name = opensanctions-graph
url = https://github.com/opensanctions/graph
license = MIT

[options]
packages = find:
install_requires:
    followthemoney>=3.2.0
    nomenklatura>=2.7.5
    datapatch
    pyicu
    zavod>=0.5.0

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

