[metadata]
name = graph-etl
url = https://github.com/opensanctions/graph
license = MIT

[options]
packages = find:
install_requires:
    followthemoney>=3.2.0
    nomenklatura>=3.0.1
    datapatch
    openpyxl
    pyicu
    ijson
    zavod>=0.5.0
    awscli
    gsutil

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

